--- a/community.html
+++ b/community.html
@@ -15,8 +15,8 @@
       <img id="logo" src="logo.png" alt="South Loop Chamber of Commerce Logo">
       <ul class="nav">
         <li><a href="index.html">Welcome</a></li>
-        <li class="active"><a href="community.html">Our Community</a></li>
-        <li><a href="members.html">Our Members & Board</a></li>
+        <li class="active"><a href="community.html">Community Services</a></li>
+        <li><a href="members.html">Members & Board</a></li>
         <li><a href="questions.html">FAQs</a></li>
       </ul>
     </div>
