--- a/members.html
+++ b/members.html
@@ -15,14 +15,14 @@
 			<img id="logo" src="logo.png" alt="South Loop Chamber of Commerce Logo">
 			<ul class="nav">
 				<li><a href="index.html">Welcome</a></li>
-				<li><a href="community.html">Our Community</a></li>
-				<li class="active"><a href="members.html">Our Members & Board</a></li>
+				<li><a href="community.html">Community Services</a></li>
+				<li class="active"><a href="members.html">Members & Board</a></li>
 				<li><a href="questions.html">FAQs</a></li>
 			</ul>
     </div>
     </header>
 	<h2>members</h2>
-	
+
 	<div class="members" >
 		<div id="members_1" >
 			<p>ACCOUNTING / CPA FIRM
@@ -67,7 +67,7 @@
 			<p>BAKERY
 			BAKE FOR ME                 		773-624-9902
 			4305 S. Halsted St.             	60609
-			www.bakeforme.com 
+			www.bakeforme.com
 
 			BISCOTTI’S GALORE & MORE, INC.   	312-842-7670
 			3160 S. Wells St.                   	60616
@@ -85,19 +85,19 @@
 			615 W. 31st St.                   	60616
 			www.emarquettebank.com
 			PULASKI SAVINGS BANK             	773-927-3500
-			3156 S. Morgan St.                	60608     
+			3156 S. Morgan St.                	60608
 
 			ROYAL BANK                    	773-254-3422
-			2869 S. Archer Ave.               	60608 
+			2869 S. Archer Ave.               	60608
 			www.royal-bank.US</p>
 
-			<p>BASEBALL CLUB   
+			<p>BASEBALL CLUB
 			CHICAGO WHITE SOX                	312-674-5423
 			333 W. 35th St.                    	60616</p>
 
 			<p>BEVERAGE BOTTLER & DISTRIBUTOR
 			FILBERT'S DISTRIBUTING & BOTTLING CO. 773-847-1520
-			3430 S. Ashland Ave.                     
+			3430 S. Ashland Ave.
 			www.filbertsrootbeer.com 		60608</p>
 
 			<p>BLOWDRY & BEAUTY BAR
@@ -122,7 +122,7 @@
 			www.jandjcarwash.com </p>
 
 			<p>CHILD DEVELOPMENT CENTER
-			ONE HOPE UNITED / BRIDGEPORT I & II	312-949-4015                                               
+			ONE HOPE UNITED / BRIDGEPORT I & II	312-949-4015
 			514 W. 31st St.                      	60608
 			onehopeunited.org
 			CHIROPRACTIC PHYSICIANS</p>
@@ -130,13 +130,13 @@
 
 			<p>CHIROPRACTIC PHYSICIANS
 			BRIDGEPORT PAIN           		773-254-8977
-			CONTROL CENTER   
+			CONTROL CENTER
 			735 W. 35th St.                  	60616
 			www.bridgeportmb.com</p>
 
 			<p>CHURCHES
 			NATIVITY OF OUR LORD            	773-927-6263
-			653 W. 37th St.                     	60609      
+			653 W. 37th St.                     	60609
 			www.NATIVITYBRIDGEPORT.org</p>
 
 			<p>CLUBS
@@ -148,8 +148,8 @@
 			65 W. Jackson Blvd.                	60604</p>
 
 			<p>BOYS & GIRLS CLUB OF CHICAGO      	773-927-7373
-			LOUIS L. VALENTINE CLUB       
-			3400 S. Emerald Ave.              	60616     
+			LOUIS L. VALENTINE CLUB
+			3400 S. Emerald Ave.              	60616
 			www.bgcc.org</p>
 
 			<p>CONTRACTORS
@@ -172,7 +172,7 @@
 			www.adventdental.com
 
 			DR. VINCENT ARRIGO                	312-842-1018
-			3223 S. Halsted St.                  	60608     
+			3223 S. Halsted St.                  	60608
 			email:  VARRIGODDS@aol.com
 
 			CHILDREN'S DENTAL WORLD          	312-326-5437
@@ -190,7 +190,7 @@
 
 			<p>FINANCIAL ADVISOR / SERVICES
 			MORGAN STANLEY             	312-648-3326
-			Karla Thomas                                                 
+			Karla Thomas
 			227 W. Monroe ST.     Suite # 3400   	60606
 			https://www.morganstanleyfa.com/Karla.Thomas/
 
@@ -212,7 +212,7 @@
 
 			<p>FOOD
 			JOHNNY O’S DELI               	773-927-1011
-			3465 S. Morgan St.                  	60608     
+			3465 S. Morgan St.                  	60608
 
 			26th STREET SUGAR SHACK         	312-225-6568
 			630 W. 26th ST.                 	60616
@@ -238,8 +238,8 @@
 			www.dalcamofuneralhome.com
 
 			THOMAS MCINERNEY’S SONS      	773-268-0703
-			FUNERAL HOME   
-			4635 S. Wallace St.                  	60609     
+			FUNERAL HOME
+			4635 S. Wallace St.                  	60609
 			Since 1873 – Family Owned – 4th Generation
 			www. mcinerneyfh.com</p>
 
@@ -248,8 +248,8 @@
 			501 W. 31st St.                   	60616</p>
 
 			<p>GIFTS / COLLECTIBLES
-			IT'S ALL RIGHT HERE                              
-			3105 S. Wallace - Suite A       		60616</p> 
+			IT'S ALL RIGHT HERE
+			3105 S. Wallace - Suite A       		60616</p>
 
 			<p>GRAPHIC DESIGN, COMMERCIAL SIGN & PRINT
 			ATHENA DESIGN GROUP		773-254-2828
@@ -278,21 +278,21 @@
 
 			<p>INSURANCE
 			DALEY INSURANCE                   	773-927-0800
-			BROKERAGE, INC.    
+			BROKERAGE, INC.
 			3530 S. Halsted St.                  	60609
 			All Forms of Insurance Available
 
 			C & C INSURANCE                    	773-940-1720
-			SOLUTIONS, LLC                       
-			2998 S. Archer Ave.                	60608 
+			SOLUTIONS, LLC
+			2998 S. Archer Ave.                	60608
 
 			ELIVA SOLIS STATE FARM AGENCY    	773-475-6400
 			1556 W. 35th St.                      	60609
 			elvia@elviasolis.com
 
 			STATE FARM INSURANCE             	312-791-1200
-			MCKENZIE INSURANCE AGENCY, INC.     
-			725 W. 31st St.                   	60616      
+			MCKENZIE INSURANCE AGENCY, INC.
+			725 W. 31st St.                   	60616
 			KathleenMcKenzie.bakt@statefarm.com
 			Insurance Sales</p>
 
@@ -303,7 +303,7 @@
 
 			<p>JEWELERS
 			OSCAR’S WATCH & JEWELRY       	773-376-5444
-			3460 S. Halsted St.                  	60609     
+			3460 S. Halsted St.                  	60609
 			www.oscarswatchandjewelry.com</p>
 
 			<p>LANDSCAPING / SNOW REMOVAL
@@ -313,11 +313,11 @@
 
 			<p>LAW FIRMS
 			BERG & BERG                      	773-823-9000
-			2100 W. 35th St.                  	60609      
+			2100 W. 35th St.                  	60609
 
 			PHILLIP K. GORDON, ATTORNEY   	773-927-4331
 			AT LAW
-			809 W. 35th St.                    	60609 
+			809 W. 35th St.                    	60609
 
 			LOFTUSLAW,  LLC
 			520 S. State St.  Suite 1206      	60605
@@ -326,7 +326,7 @@
 			KATHLEEN MARIE WALSH LTD     	708-447-8081
 			ATTORNEY AT LAW
 			3236 S. Racine Ave.                 	60608
-			www.kathleenwalshfamilylaw.net 
+			www.kathleenwalshfamilylaw.net
 
 			RAILA & ASSOCIATES PC          	312-587-9494
 			747 N. Lasalle St.- Suite 700    		60608
@@ -342,23 +342,23 @@
 
 			<p>LIQUOR STORE / COMMUNITY BAR
 			MARIA’S PACKAGED GOODS &         	773-890-0588
-			COMMUNITY BAR  
+			COMMUNITY BAR
 			960 W. 31st St.                       	60608
 			www.community-bar.com</p>
 
 			<p>MANUFACTURING
 			ENGINEERED GLASS PRODUCTS      	312-326-4710
-			2857 S. Halsted St.                 	60608 
-			A premier developer of heated glass technology     
+			2857 S. Halsted St.                 	60608
+			A premier developer of heated glass technology
 			www.EGPGLASS.com
 
 			MIDLAND METAL PRODUCTS CO.     	773-927-5700
-			1200 W. 37th St.                   	60609 
+			1200 W. 37th St.                   	60609
 			ISO 9001 Certified   WBE Certified
 			www.MIDLANDMETALPRODUCTS.COM
 
 			RAMM WHOLESALE MATERIAL       	773-523-3200
-			HANDLING, INC. 
+			HANDLING, INC.
 			3453 S. Morgan St.                	60608
 
 			TRIPP LITE                         	773-869-1111
@@ -379,14 +379,14 @@
 
 			<p>MEAT - WHOLESALE
 			GREAT WESTERN BEEF CO., INC.     	773-927-3790
-			4044 S. Halsted St.                	60609     
+			4044 S. Halsted St.                	60609
 			www.greatwesternbeef.com
 
 			HENRY KAMINSKI, INC.              	773-254-4125
-			3762 S. Halsted St.               	60609     
+			3762 S. Halsted St.               	60609
 
 			LINCOLN PROVISIONS, INC.         	773-254-2400
-			824 W. 38th Place                 	60609     
+			824 W. 38th Place                 	60609
 			email:  jjsbeef@aol.com
 
 			SULLIVAN PROVISIONS, INC.        	773-924-1716
@@ -394,7 +394,7 @@
 
 			<p>MEDICAL CLINIC
 			ST. PATRICK FAMILY HEALTH          	773-523-9550
-			CENTER                                   
+			CENTER
 			3344 S. Halsted ST.              	60608</p>
 			<p>MONASTERY  /  B & B
 			MONASTERY CASKETS                 	773-927-7424
@@ -403,7 +403,7 @@
 
 			<p>NEWSPAPERS
 			THE BRIDGEPORT NEWS, INC.       	773-927-0025
-			3506 S. Halsted St.                	60609     
+			3506 S. Halsted St.                	60609
 			www.bridgeportnews.net</p>
 
 			<p>NON PROFIT
@@ -444,12 +444,12 @@
 			3303 S. Halsted St. (SUITE 205)       	60608
 			Licensed Clinical Psychologist</p>
 
-			<p>PUBLIC LIBRARY 
+			<p>PUBLIC LIBRARY
 			RICHARD J. DALEY LIBRARY          	312-747-8990
 			3400 S. Halsted ST.            	 	60608
 			www.chipublib.org</p>
 		</div>
-		
+
 		<div id="members_4" >
 			<p>REAL ESTATE
 			BAIRD & WARNER RESIDENTIAL SALES 	312-414-3300
@@ -482,7 +482,7 @@
 			www.conniespizza.com
 
 			FABULOUS FREDDIE'S ITALIAN        	312-465-2176
-			EATERY    
+			EATERY
 			701 W. 31st ST.                 	60616
 			www.freddieson31st.com
 
@@ -491,7 +491,7 @@
 			www.francoschicago.com
 
 			GIO'S ON 31st ST. AUTHENTIC     	312-344-1870
-			MEXICAN FOOD   
+			MEXICAN FOOD
 			451 W. 31st ST.                      	60616
 			www.giosmexican.com
 
@@ -499,8 +499,8 @@
 			3267 S. Halsted ST.               	60608
 			www.nanaorganic.com
 			PANCHO PISTOLAS AUTHENTIC      	312-225-8808
-			MEXICAN RESTAURANT, INC.       
-			700 W. 31st St.                    	60616      
+			MEXICAN RESTAURANT, INC.
+			700 W. 31st St.                    	60616
 
 			PIZZA NOVA EXPRESS               	773-548-5100
 			558 W. 43rd St.       			60609
@@ -510,7 +510,7 @@
 			www.polocafe.com
 
 			RICOBENE'S                      	312-225-5555
-			252 W. 26th ST.                      	60616 
+			252 W. 26th ST.                      	60616
 			www.ricobenespizza.com
 
 			TAQUERIA SAN JOSE #1            	773-842-5106
@@ -520,9 +520,9 @@
 			2701 S. Eleanor ST.               	60608
 			www.theduckinnchicago.com </p>
 
-			<p>RETAIL- LIGHTING & CLEANING SUPPLIES 
+			<p>RETAIL- LIGHTING & CLEANING SUPPLIES
 			UNIVERSAL LIGHTING &             	773-927-2000
-			CLEANING SUPPLIES 
+			CLEANING SUPPLIES
 			3084 S. Lock ST.                  	60608</p>
 
 			<p>RETAIL SHIPPING
@@ -541,12 +541,12 @@
 			www.DLS.org
 
 			ILLINOIS INSTITUTE OF              	312-567-7010
-			TECHNOLOGY    
+			TECHNOLOGY
 			10 W. 35th St.                        	60616</p>
 
 			<p>SECURITY
 			AMERICAN HERITAGE PROTECTIVE   	708-388-7900
-			SERVICES  
+			SERVICES
 			5100 W. 127th St.                 	60803
 			www.ahpservices.com</p>
 
@@ -561,14 +561,14 @@
 
 			<p>STAFFING
 			ALLMED STAFFING INC.              	773-254-5555
-			738 W. 35th St.                    	60616      
+			738 W. 35th St.                    	60616
 			www.allmedstaffinginc.com</p>
 
 			<p>STORAGE / TRUCK RENTAL
 			EAST BANK RECORDS                 	773-247-3000
 			MANAGEMENT EAST BANK STORAGE
 			1200 W. 35th  St.                 	60609
-			Self storage, business & truck rental, document storage   
+			Self storage, business & truck rental, document storage
 			www.EASTBANKSTORAGE.com
 
 			U- HAUL MOVING & STORAGE       	312- 492- 8001
@@ -594,8 +594,8 @@
 			4450 S. Morgan ST.            		60609</p>
 
 			<p>UTILITY, ELECTRIC
-			COM ED                        	312-339-8028  
-			7601 S. Lawndale Ave.         		60652     
+			COM ED                        	312-339-8028
+			7601 S. Lawndale Ave.         		60652
 			www.comed.com    </p>
 
 			<p>VETERANS ASSOCIATION
@@ -615,7 +615,7 @@
 			https://My.BoissetCollection.com/ChrisPierucci</p>
 
 			<p>WIRING DELTA WIRING SOLUTIONS 773-841-8811 3465 S. Morgan ST. 60608</p>
-			
+
 		</div>
 	</div>
 
