--- a/index.html
+++ b/index.html
@@ -15,12 +15,14 @@
 			<img id="logo" src="logo.png" alt="South Loop Chamber of Commerce Logo">
 			<ul class="nav">
 				<li class="active"><a href="index.html">Welcome</a></li>
-				<li><a href="community.html">Our Community</a></li>
-				<li><a href="members.html">Our Members & Board</a></li>
+				<li><a href="community.html">Community Services</a></li>
+				<li><a href="members.html">Members & Board</a></li>
 				<li><a href="questions.html">FAQs</a></li>
 			</ul>
     </div>
     </header>
+    <section>
+    <h1>South Loop Chamber of Commerce</h1>
 	<div id="main_info">
 		<div id="news">
 			<h2>News</h2>
@@ -34,6 +36,7 @@
 			</div>
 		</div>
 	</div>
+</section>
 	<footer>
     <ul class="footer">
       <li><p>3538 S. Halsted St.</p>
