--- a/members.html
+++ b/members.html
@@ -21,8 +21,9 @@
 			</ul>
     </div>
     </header>
-	<h2>members</h2>
-
+    <section>
+      <h1>Board</h1>
+	<h1>Our Members</h1>
 	<div class="members" >
 		<div id="members_1" >
 			<p>ACCOUNTING / CPA FIRM
@@ -618,7 +619,7 @@
 
 		</div>
 	</div>
-
+<section>
 	  <footer>
       <ul class="footer">
         <li><p>3538 S. Halsted St.</p>
