--- a/community.html
+++ b/community.html
@@ -21,6 +21,126 @@
       </ul>
     </div>
     </header>
+  <br>
+	<p>The South Loop is rich in history.  From its inception, the South Loop area became an integral part of Chicago's amazing growth.  Our churches, our schools and our businesses are found in the very heart of the city and continue to prosper.</p>
+	<br>
+	<p>Our churches have woven the fabric of our community's rich tapestry for over 100 years.  From the beginning they have fostered an accepting and supportive environment where recent immigrants could find the warm embrace of community.  Their picturesque architecture also enhances our community's beauty. See our churches here.</p>
+	<p>The South Loop school district ranks well with city scores.  They enhance learning, discipline, build character, and give our youth solid foundation from which to build upon.  
+	   See our schools here.</p>
+	<br>
+	<br>
+	<br>
+	<h3>North boundary:</h3>
+	<p>I-55 and 90/94 expressway junction</p>
+	<br>
+	<h3>South boundary:</h3>
+	<p>Approximately 43rd St.</p>
+	<br>
+ 	<h3>East boundary:</h3>
+	<p>90/94 Dan Ryan Expressway</p>
+	<br>
+	<h3>West boundary:</h3>
+	<p>Approximately Ashland Ave.</p>
+	<br>
+	<br>
+	<br>
+	<h1>City Services</h1>
+	<br>
+<div class="column">
+    <h2>11th Ward Democratic Party</h2>
+    <p>Patrick D. Thompson</p>
+	<p>11th Ward Alderman</p>
+	<p>3659 S. Halsted St.</p>
+	<p>Chicago, Il 60609</p>
+	<p>(773) 254-6677</p>
+	<br>
+	<br>
+	<h2>Department of Streets and Sanitation</h2>
+	<p>Patrick Botica</p>
+	<p>11th Ward Alderman</p>
+	<p>11th Ward Yard Office</p>
+	<p>312-745-1801</p>
+	<br>
+	<br>
+	<h2>CHICAGO BRIDGEPORT V.F.W.</h2>
+	<p>POST #5079</p>
+	<p>3200 S. May St.</p>
+	<p>Chicago, IL 60608</p>
+	<p>(773) 847-8404</p>
+	<br>
+	<br>
+	<h2>MARK WHITE SQUARE V.F.W.</h2>
+	<p>POST #5079</p>
+	<p>3200 S. May St.</p>
+	<p>Chicago, IL 60608</p>
+	<p>(773) 847-8404</p>
+	<br>
+	<br>
+	<h2>Mercy Hospital & Medical Center</h2>
+	<p>2525 S. Michigan Ave.</p>
+	<p>Chicago, IL 60616</p>
+</div>
+<div class="column">
+    <h2>9th District (Deering) Police Station</h2>
+    <p>Commander</p>
+	<p>3120 S. Halsted</p>
+	<p>Chicago, Il 60616</p>
+	<p>312-747-8227</p>
+	<br>
+	<br>
+	<h2>9th District Fire Station 29</h2>
+	<p>3509 S. Lowe</p>
+	<p>Chicago, Il 60609</p>
+	<br>
+	<br>
+	<h2>ARCHER AVE SENIOR RESIDENCES</h2>
+    <p>2928 S. Archer Ave</p>
+    <p>Chicago, IL 60608</p>
+	<p>(773) 376-2360</p>
+	<br>
+	<br>
+	<h2>BENTON COMMUNITY SETTLEMENT</h2>
+	<p>3052 S. Gratten Ave.</p>
+	<p>Chicago, IL 60608</p>
+	<p>(773) 927-6420</p>
+	<br>
+	<br>
+	<h2>SENIOR SUITES OF BRIDGEPORT</h2>
+	<p>2825 S. Halsted St.</p>
+	<p>Chicago, IL 60608</p>
+	<p>(312) 326-0333</p>
+	<br>
+	<br>
+</div>
+<div class="column">
+	<h2>THE WESTSIDE YOUTH NETWORK</h2>
+	<p>3616 S. Halsted St.</p>
+	<p>Chicago, IL 60609</p>
+	<p>(773) 523-8700</p>
+	<br>
+	<br>
+	<h2>CHICAGO PUBLIC LIBRARY</h2>
+	<p>RICHARD J. DALEY BRANCH</p>
+	<p>3400 S. Halsted St.</p>
+	<p>Chicago, IL 60608</p>
+	<p>(312) 747-8990</p>
+	<br>
+	<br>
+	<h2>CHICAGO PUBLIC LIBRARY</h2>
+	<p>CANARYVILLE BRANCH</p>
+	<p>642 W. 43rd St.</p>
+	<p>Chicago, IL 60609</p>
+	<p>(773) 747-0644</p>
+	<br>
+	<br>
+	<h2>Valentine Boys & Girls Club</h2>
+	<p>Club Director</p>
+	<p>3400 S. Emerald St.</p>
+	<p>Chicago, IL 60616</p>
+	<p>(773)927-7373</p>
+	<br>
+	<br>
+</div>
     <footer>
       <ul class="footer">
         <li><p>3538 S. Halsted St.</p>
