--- a/community.html
+++ b/community.html
@@ -22,15 +22,18 @@
     </div>
     </header>
   <br>
+	<div class="history">
 	<p>The South Loop is rich in history.  From its inception, the South Loop area became an integral part of Chicago's amazing growth.  Our churches, our schools and our businesses are found in the very heart of the city and continue to prosper.</p>
 	<br>
 	<p>Our churches have woven the fabric of our community's rich tapestry for over 100 years.  From the beginning they have fostered an accepting and supportive environment where recent immigrants could find the warm embrace of community.  Their picturesque architecture also enhances our community's beauty. See our churches here.</p>
 	<br>
 	<p>The South Loop school district ranks well with city scores.  They enhance learning, discipline, build character, and give our youth solid foundation from which to build upon.  
 	   See our schools here.</p>
+	</div>
 	<br>
 	<br>
 	<br>
+	<div class="map">
 	<h3>North boundary:</h3>
 	<p>I-55 and 90/94 expressway junction</p>
 	<br>
@@ -42,11 +45,17 @@
 	<br>
 	<h3>West boundary:</h3>
 	<p>Approximately Ashland Ave.</p>
+	<div class="picture">
+	<img src="southchamberregion1.jpg" alt="Map">
+	</div>
+</div>
 	<br>
 	<br>
 	<br>
+	<div class="city">
 	<h1>City Services</h1>
 	<br>
+	</div>
 <div class="column">
     <h2>11th Ward Democratic Party</h2>
     <p>Patrick D. Thompson</p>
