--- a/community.html
+++ b/community.html
@@ -41,9 +41,9 @@
 	<img src="southchamberregion1.jpg" alt="Map">
 	</div>
 </section>
-<section>
+<section class="cityservices">
 	<h1>City Services</h1>
-<article class="column">
+<article class="column1">
     <h2>11th Ward Democratic Party</h2>
     <p>Patrick D. Thompson</p>
 	<p>11th Ward Alderman</p>
@@ -69,7 +69,7 @@
 	<p>2525 S. Michigan Ave.</p>
 	<p>Chicago, IL 60616</p>
 </article>
-<article class="column">
+<article class="column2">
     <h2>9th District (Deering) Police Station</h2>
     <p>Commander</p>
 	<p>3120 S. Halsted</p>
@@ -91,7 +91,7 @@
 	<p>Chicago, IL 60608</p>
 	<p>(312) 326-0333</p>
 </article>
-<article class="column">
+<article class="column3">
 	<h2>THE WESTSIDE YOUTH NETWORK</h2>
 	<p>3616 S. Halsted St.</p>
 	<p>Chicago, IL 60609</p>
