--- a/community.html
+++ b/community.html
@@ -24,9 +24,9 @@
     <section>
       <h1>Community</h1>
       	<p>The South Loop is rich in history.  From its inception, the South Loop area became an integral part of Chicago's amazing growth.  Our churches, our schools and our businesses are found in the very heart of the city and continue to prosper.</p>
-      	<p>Our churches have woven the fabric of our community's rich tapestry for over 100 years.  From the beginning they have fostered an accepting and supportive environment where recent immigrants could find the warm embrace of community.  Their picturesque architecture also enhances our community's beauty. See our churches here.</p>
+      	<p>Our churches have woven the fabric of our community's rich tapestry for over 100 years.  From the beginning they have fostered an accepting and supportive environment where recent immigrants could find the warm embrace of community.  Their picturesque architecture also enhances our community's beauty. See our churches <a href=http://www.southloopchamberofcommerce.com/churches>here.</a></p>
       	<p>The South Loop school district ranks well with city scores.  They enhance learning, discipline, build character, and give our youth solid foundation from which to build upon.
-      	   See our schools here.</p>
+		See our schools <a href="http://www.southloopchamberofcommerce.com/schools">here.</a></p>
     </section>
 <section>
 	<div class="map">
