--- a/members.html
+++ b/members.html
@@ -21,6 +21,7 @@
 			</ul>
     </div>
     </header>
+    <section>
 	  <h1>Officers</h1>
 	  	<div class="officers">
 		  <div class="pres">
@@ -47,7 +48,7 @@
 			  <h2>Executive Director</h2>
 		  </div>
 	  	</div>
-	<h1>Board</h1>	
+	<h1>Board</h1>
 	<div class="board">
 		<div id="bname1">
 			<h2>James A. Baker</h2>
@@ -123,22 +124,22 @@
 			www.projectonward.org<br>
 			773-940-2992<br>
 
-			<br>Zhou B Art Center Events<br>     
+			<br>Zhou B Art Center Events<br>
 			1029 W. 35th ST.  60609<br>
 			www.zhoubevents.com</p><br>
 
 			<p>AUTO BODY<br>
-			<br>Tony’s Auto Collision Center, Inc.<br> 
+			<br>Tony’s Auto Collision Center, Inc.<br>
 			2701 S. Halsted St.  60608<br>
 		    312-225-6500<br></p>
 
 			<p>BAKERY<br>
-			<br>Bake For Me<br>                 		
+			<br>Bake For Me<br>
 			4305 S. Halsted St.  60609<br>
 			www.bakeforme.com<br>
 			773-624-9902<br>
 
-			<br>Biscotti’s Galore & More Inc.<br> 
+			<br>Biscotti’s Galore & More Inc.<br>
 			3160 S. Wells St.  60616<br>
 			Italian Cookies<br>
 			www.biscottisgalore.com<br>
@@ -152,63 +153,63 @@
 			www.citibankonline.com<br>
 			773-523-2802<br>
 
-			<br>Marquette Bank<br>               	
+			<br>Marquette Bank<br>
 			615 W. 31st St.  60616<br>
 			www.emarquettebank.com<br>
 			888-254-9500<br>
 
-			<br>Pulaski Savings Bank<br>             	
+			<br>Pulaski Savings Bank<br>
 			3156 S. Morgan St.                	60608<br>
 			773-927-3500<br>
 
-			<br>Royal Bank<br>                    	
+			<br>Royal Bank<br>
 			2869 S. Archer Ave.               	60608<br>
 			www.royal-bank.US<br>
 			773-254-3422<br></p>
 
 			<p><br>BASEBALL CLUB<br>
 
-			<br>Chicago White Sox<br>                	
+			<br>Chicago White Sox<br>
 			333 W. 35th St.                    	60616<br>
 			312-674-5423<br></p>
 
 			<p><br>BEVERAGE BOTTLER & DISTRIBUTOR<br>
-			FILBERT'S DISTRIBUTING & BOTTLING CO.<br> 
+			FILBERT'S DISTRIBUTING & BOTTLING CO.<br>
 			3430 S. Ashland Ave. 60608<br>
 			www.filbertsrootbeer.com<br>
 			773-847-1520<br></p>
 
 			<p><br>BLOWDRY & BEAUTY BAR<br>
-			<br>&BLOWDRY<br>                        	
+			<br>&BLOWDRY<br>
 			1315 S. Michigan Ave.             	60605<br>
 			www.andblowdry.com<br>
 			312-929-3078<br></p>
 
 			<p><br>CAFE<br>
-			<br>GIO'S CAFE & DELI<br>                  	
+			<br>GIO'S CAFE & DELI<br>
 			2724 S. Lowe Ave.<br>
 			www.gioscafe.com<br>
 			312-225-6368<br></p>
 
 			<p><br>CANDY / NUTS<br>
-			<br>SUPERIOR NUT & CANDY CO., INC.<br>    	
+			<br>SUPERIOR NUT & CANDY CO., INC.<br>
 			1111  W. 40th St.                  	60609<br>
 			Nut roasting/snack food<br>
 			www.superiornutandcandy.com<br>
 			773-254-7900<br></p>
 
 			<p><br>CAR WASH<br>
-			<br>J & J CLOTH CAR WASH, INC.<br>       	
+			<br>J & J CLOTH CAR WASH, INC.<br>
 			349 W. 31st St.                   	60616<br>
 			www.jandjcarwash.com<br>
 			312-842-1008<br></p>
 
 			<p><br>CHILD DEVELOPMENT CENTER<br>
-			<br>ONE HOPE UNITED / BRIDGEPORT I & II<br>	
+			<br>ONE HOPE UNITED / BRIDGEPORT I & II<br>
 			514 W. 31st St.                      	60608<br>
 			onehopeunited.org<br>
 			312-949-4015<br></p>
-			
+
 			<p><br>CHIROPRACTIC PHYSICIANS<br>
 
 
@@ -218,7 +219,7 @@
 			773-254-8977<br></p>
 
 			<p><br>CHURCHES<br>
-			<br>NATIVITY OF OUR LORD<br>            	
+			<br>NATIVITY OF OUR LORD<br>
 			653 W. 37th St.                     	60609<br>
 			www.NATIVITYBRIDGEPORT.org<br>
 			773-927-6263<br></p>
@@ -437,7 +438,7 @@
 			www.tripplite.com<br></p>
 
 			<p><br>MARKET / GRILL<br>
-				<br>MARTINEZ SUPERMARKET<br>           	
+				<br>MARTINEZ SUPERMARKET<br>
 			773-254-4048<br>
 			3301 S. Morgan St.                	60609<br></p>
 
@@ -465,7 +466,7 @@
 			824 W. 38th Place                 	60609<br>
 			email:  jjsbeef@aol.com<br>
 
-			<br>SULLIVAN PROVISIONS, INC.<br>        
+			<br>SULLIVAN PROVISIONS, INC.<br>
 				773-924-1716<br>
 			3801 S. Sangamon                   	60609<br></p>
 
@@ -473,7 +474,7 @@
 				<br>ST. PATRICK FAMILY HEALTH Center<br>
 		          	773-523-9550<br>
 			3344 S. Halsted ST.              	60608<br></p>
-			
+
 			<p><br>MONASTERY  /  B & B<br>
 				<br>MONASTERY CASKETS<br>
 	                 	773-927-7424<br>
@@ -487,7 +488,7 @@
 			www.bridgeportnews.net<br></p>
 
 			<p><br>NON PROFIT<br>
-				<br>RECOVERY ON WATER (ROW)<br>		
+				<br>RECOVERY ON WATER (ROW)<br>
 				312-505-3568<br>
 			1200 W. 35th ST.			60609<br>
 			www.recoveryonwater.org<br></p>
@@ -557,7 +558,7 @@
 			3500 S. Union Ave.              	60609<br></p>
 
 			<p><br>RECYCLING & TRASH DISPOSAL<br>
-				<br>REPUBLIC SERVICES OF CHICAGO<br>  
+				<br>REPUBLIC SERVICES OF CHICAGO<br>
 				 	773-358-4604<br>
 			2608 S. Damen Ave.           		60608<br>
 			www.republicservices.com<br></p>
@@ -592,10 +593,10 @@
                              	312-375-9163<br>
 			3267 S. Halsted ST.               	60608<br>
 			www.nanaorganic.com<br>
-			
+
 			<br>PANCHO PISTOLAS AUTHENTIC<br>
 			      	312-225-8808<br>
-			
+
 					  <br>MEXICAN RESTAURANT, INC.<br>
 			700 W. 31st St.                    	60616<br>
 
@@ -617,7 +618,7 @@
 		            	773-842-5106<br>
 			3253 S. HALSTED ST.          		60608<br>
 
-			<br>THE DUCK INN<br>                    	
+			<br>THE DUCK INN<br>
 			312-724-8811<br>
 			2701 S. Eleanor ST.               	60608<br>
 			www.theduckinnchicago.com<br></p>
@@ -708,7 +709,7 @@
 			4450 S. Morgan ST.            		60609<br></p>
 
 			<p><br>UTILITY, ELECTRIC<br>
-				<br>COM ED<br>                        	
+				<br>COM ED<br>
 		312-339-8028<br>
 			7601 S. Lawndale Ave.         		60652<br>
 			www.comed.com<br></p>
@@ -730,13 +731,13 @@
 			1016 W. Jackson Blvd. Suite 50		60607<br>
 			https://My.BoissetCollection.com/ChrisPierucci<br></p>
 
-			<p><br>WIRING<br> 
+			<p><br>WIRING<br>
 				<br>DELTA WIRING SOLUTIONS<br>
 			 773-841-8811<br>
 			  3465 S. Morgan ST. 60608<br></p>
 		</div>
 	</div>
-<section>
+</section>
 	  <footer>
       <ul class="footer">
         <li><p>3538 S. Halsted St.</p>
