--- a/community.html
+++ b/community.html
@@ -38,7 +38,7 @@
 	<p>90/94 Dan Ryan Expressway</p>
 	<h3>West boundary:</h3>
 	<p>Approximately Ashland Ave.</p>
-	<img src="southchamberregion1.jpg" alt="Map">
+	<img class="map" src="southchamberregion1.jpg" alt="Map">
 	</div>
 </section>
 <section class="cityservices">
